rpi-cluster-gitops/apps/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: web-server
spec:
  selector:
    app: web-server
  ports:
    - port: 80
      targetPort: 80
