rpi-cluster-gitops/apps/web-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server
  namespace: web-server
spec:
  ingressClassName: traefik
  rules:
    - host: miro.zip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 80
